--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -82,50 +82,50 @@
                     </p>
                   </li>
 
-                    <li class="timeline-item mb-5">
-                      <h5 class="fw-bold">Frontend developer( Angular )</h5>
-                      <p class="text-muted mb-0 fw-bold">Kanban Board( Demo )  Aug 2024</p>
-                      <p class="text-muted mb-2 fw-semibold">Sparkout Tech Solutions Pvt.ltd</p>
-                      <p class="text-muted">
-                        The kanban board application is a task management tool that helps users organize and track their work 
-                        visually. The app implements a kanban methodology, allowing users to create tasks, assign them to columns 
-                        (representing different stages) and move them as the work progress. It is designed to enhance productivity 
-                        and collaboration, making it ideal for teams and individuals managing projects.
-                      </p>
-                    </li>
-
-                    <li class="timeline-item mb-5">
-                        <h5 class="fw-bold">Frontend developer( Angular )</h5>
-                        <p class="text-muted mb-0 fw-bold">E-Commerce app( Demo ) Sep 2022</p>
-                        <p class="text-muted mb-2 fw-semibold">Smartansys Technologies pvt.ltd</p>
-                        <p class="text-muted">
-                          The Ecommerce web application is an online platform that allows user to browse, search, and purchase various products. 
-                          This app aims to provide a seamless shopping experience with features like product listings, shopping carts and user 
-                          authentication.
-                        </p>
-                    </li>
+                  <li class="timeline-item mb-5">
+                    <h5 class="fw-bold">Frontend developer( Angular )</h5>
+                    <p class="text-muted mb-0 fw-bold">Kanban Board( Demo )  Aug 2024</p>
+                    <p class="text-muted mb-2 fw-semibold">Sparkout Tech Solutions Pvt.ltd</p>
+                    <p class="text-muted">
+                      The kanban board application is a task management tool that helps users organize and track their work 
+                      visually. The app implements a kanban methodology, allowing users to create tasks, assign them to columns 
+                      (representing different stages) and move them as the work progress. It is designed to enhance productivity 
+                      and collaboration, making it ideal for teams and individuals managing projects.
+                    </p>
+                  </li>
                 </ul>
             </div>
             <div class="col-sm-12 col-md-6 Degree px-2">
                 <ul class="timeline">
-                    <li class="timeline-item mb-5">
-                        <h5 class="fw-bold">Frontend developer( Angular )</h5>
-                        <p class="text-muted mb-0 fw-bold">Finance management( Product ) Jan 2023</p>
-                        <p class="text-muted mb-2 fw-semibold">Smartansys Technologies pvt.ltd</p>
-                        <p class="text-muted">
-                          Finance Collection Management System used to manage the daily, weekly, and monthly
-                          loan amount collections, and assets in an organization. In addition to supporting agent and
-                          customer management. The main purpose of a financial management system is to maximize
-                          profits and ensure long term enterprise . It helps for streamline invoicing and bill collection,
-                          optimize daily, monthly, and yearly cash flow, automate finance processes and reduce
-                          accounting errors and speed up financial close and reporting activities.
-                        </p>
-                    </li>
-                
-                    <li class="timeline-item mb-5">
-                      <h5 class="fw-bold">Electronics and Communication Engineering</h5>
-                      <p class="text-muted mb-2 fw-bold">Gnanamani College of Technology</p>
-                    </li>
+                  <li class="timeline-item mb-5">
+                    <h5 class="fw-bold">Frontend developer( Angular )</h5>
+                    <p class="text-muted mb-0 fw-bold">Finance management( Product ) Jan 2023</p>
+                    <p class="text-muted mb-2 fw-semibold">Smartansys Technologies pvt.ltd</p>
+                    <p class="text-muted">
+                      Finance Collection Management System used to manage the daily, weekly, and monthly
+                      loan amount collections, and assets in an organization. In addition to supporting agent and
+                      customer management. The main purpose of a financial management system is to maximize
+                      profits and ensure long term enterprise . It helps for streamline invoicing and bill collection,
+                      optimize daily, monthly, and yearly cash flow, automate finance processes and reduce
+                      accounting errors and speed up financial close and reporting activities.
+                    </p>
+                  </li>
+
+                  <li class="timeline-item mb-5">
+                    <h5 class="fw-bold">Web and API developer</h5>
+                    <p class="text-muted mb-0 fw-bold">E-Commerce app( Demo ) Aug 2022</p>
+                    <p class="text-muted mb-2 fw-semibold">Smartansys Technologies pvt.ltd</p>
+                    <p class="text-muted">
+                      The Ecommerce web application is an online platform that allows user to browse, search, and purchase various products. 
+                      This app aims to provide a seamless shopping experience with features like product listings, shopping carts and user 
+                      authentication.
+                    </p>
+                  </li>
+
+                  <li class="timeline-item mb-5">
+                    <h5 class="fw-bold">Electronics and Communication Engineering</h5>
+                    <p class="text-muted mb-2 fw-bold">Gnanamani College of Technology</p>
+                  </li>
                 </ul>
             </div>
         </div>
